src/style/index.css
/* ... */
.extra b {
  position: absolute;
  left: 6px;
}

.info-table li::after,
.extra::after {
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 2px;
  background: linear-gradient(
    to bottom,
    rgb(var(--main)) 0%,
    rgba(0, 0, 0, 0) 100%
  );
}

.info-table .vboy-wrap {
  border: none;
}
.info-table .vboy-wrap::after {
  display: none;
}

.vboy {
  height: 180px;
  pointer-events: none;
  background-image: url("https://cybersandbox.ca/resources/vaultboy-tp.gif");
  background-position: 60% center;
  background-repeat: no-repeat;
  -webkit-filter: hue-rotate(-52deg) saturate(0.9);
  filter: hue-rotate(-52deg) saturate(0.9);
}

.item-icon {
  position: absolute;
  bottom: 4px;
  left: 0;
}

.icon {
  float: left;
  width: 40px;
  height: 40px;
  margin-top: -20px;
  margin-right: 7px;
  border: 2px solid;
  object-fit: contain;
}

.icon img {
  max-width: 100%;
  max-height: 100%;
}

.post {
  line-height: 1.5em;
  padding-right: 20px;
  font-size: 14px;
}

.cursor {
  position: absolute;
  z-index: -1;
  pointer-events: none;
}

.cursor::before {
  content: "";
  display: block;
  width: 20px;
  height: 25px;
  background-size: contain;
  background-repeat: no-repeat;
}

.cursor.cursor-hidden::before {
  background-image: unset;
}

.cursor.cursor-default::before {
  background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.cursor.cursor-input::before {
  background-image: url("https://cybersandbox.ca/resources/nv-cur-text.png");
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.cursor.cursor-active::before {
  background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
  -webkit-filter: brightness(1.15) saturate(1.15);
  filter: brightness(1.15) saturate(1.15);
}

.fade-a {
  animation: fade-swap 8s infinite;
  animation-delay: -4s;
  opaicty: 1;
}

.fade-b {
  position: absolute;
  left: 0;
  width: 100%;
  padding: 0 6px;
  opacity: 0;
  animation: fade-swap 8s infinite;
}

.pip-head .fade-b {
  padding: 0 10px;
}

@keyframes fade-swap {
  0% {
    opacity: 0;
    color: rgb(var(--alt));
  }
  20% {
    opacity: 0;
    color: rgb(var(--alt));
  }
  30% {
    opacity: 1;
    color: rgb(var(--main));
  }
  65% {
    opacity: 1;
    color: rgb(var(--main));
  }
  75% {
    opacity: 0;
    color: rgb(var(--alt));
  }
  100% {
    opacity: 0;
    color: rgb(var(--alt));
  }
}

@media only screen and (max-width: 800px) {
  .frame {
    height: 100vh;
    width: 100%;
    max-height: unset;
    border: none;
  }
  
  .output {
    padding: 25px 15px 30px 15px;
  }
  
  .pipboy {
    padding-bottom: 20px;
  }
  
  #items, #stats {
    margin-top: 55px;
    padding-top: 15px;
  }
  .pip-head {
    width: 100%;
    background: transparent;
  } 
  .pip-head li {
    width: calc(50% - 10px);
    border-top: 2px solid;
    margin-bottom: 10px;
    margin-top: -2px;
    padding-top: 10px;
  }
  .pip-head li:not(:nth-of-type(2))::before {
    display: none;
  }
  .pip-body .options {
    width: 100%;
    max-width: unset;
    position: relative;
  }
  .pip-body {
    position: relative;
  }
  .pip-body .info {
    width: calc(100% + 30px);
    margin-left: -30px;
    margin-top: 10px;
    position: relative;
    padding-bottom: 10px;
    float: none;
    height: 100%;
  }
  .pip-body .info::after,
  .pip-head::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    height: 2px;
    width: 100%;
    background: linear-gradient(
      to right,
      rgba(0, 0, 0, 0) 0%,
      rgb(var(--main)) 35%,
      rgb(var(--main)) 65%,
      rgba(0, 0, 0, 0) 100%
    );
  }
  
  .options label, .options a {
    width: calc(100% + 24px);
    max-width: unset;
  }
  
  .pip-head::after {
    top: unset;
    bottom: 5px;
  }
  
  .stats-page {
    padding: 0;
  }
  
  .post {
    padding: 10px;
  }

  .pipboy .pip-foot {
    bottom: -18px;
    width: 98%;
    margin: 0 1%;
    left: 0;
  }

  .pip-foot a {
    width: 16%;
    height: 35px;
    margin: 0 2%;
    line-height: 32px;
    overflow: hidden;
    font-size: 0.85em;
  }
  .pip-foot a::after {
    bottom: 16px;
  }
  .cursor.cursor-active::before {
    background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
    -webkit-filter: brightness(1);
    filter: brightness(1);
  }
}

html.amber {
  --main: 255,170,60;
  --alt: 120,75,20;
}

.white .filter,
.white .cursor {
  filter: saturate(0) brightness(1.15);
}
html.white { 
  --main: 245,245,245;
  --alt: 130,130,130;
}

.red .filter,
.red .cursor {
  filter: sepia(1) saturate(7) brightness(0.65) hue-rotate(-35deg);
}
html.red { 
  --main: 255,40,0;
  --alt: 160,20,0;
}

.green .filter,
.green .cursor {
  filter: sepia(1) saturate(5) brightness(0.85) hue-rotate(65deg);
}
html.green { 
  --main: 0,230,50;
  --alt: 0,160,30;
}

.blue .filter,
.blue .cursor {
  filter: sepia(1) saturate(5) hue-rotate(165deg); 
}
html.blue { 
  --main: 50,150,255;
  --alt: 20,80,160;
}

.black .filter,
.black .cursor {
  filter: sepia(1) invert(1); 
}
html.black { 
  --main: 200,220,250;
  --alt: 90,100,150;
}

.piece::before,
.piece::after {
  display: block;
  position: absolute;
  top: 50%;
  left: 0;
  width: 100%;
  height: 0%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  pointer-events: none;
  opacity: 0;
  transition: all 0.5s ease-in-out;
}

.black .piece::before {
  background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/the-eye.gif');
  background-size: 110vmax auto;
  opacity: 0.8;
  height: 100%;
  top: 0;
  background-color: #2f3748;
  filter: sepia(1) hue-rotate(170deg);
}

.black .piece::after {
  background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/b-noise.gif');
  opacity: 0.2;
  height: 100%;
  top: 0;
}

@media only screen and (min-width: 1310px) {
  .black .piece::before {
  background-size: 1300px auto;
  }
}
/* ... */

